force-app/main/default/objects/Mst_Yard__c/fields/AuctionDay__c.field-meta.xml
<CustomField>
    <fullName>AuctionDay__c</fullName>
    <description>喜多</description>
    <label>オークション開催曜日</label>
    <length>20</length>
    <type>Text</type>
</CustomField>