force-app/main/default/objects/Mst_Yard__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <description>喜多</description>
    <label>搬入先住所</label>
    <length>50</length>
    <type>Text</type>
</CustomField>