force-app/main/default/objects/Mst_Yard__c/fields/DeliveryDestinationPerson__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestinationPerson__c</fullName>
    <description>喜多</description>
    <label>搬入先担当者名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>