force-app/main/default/objects/Mst_Yard__c/fields/DeliveryPhonenumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPhonenumber__c</fullName>
    <description>喜多</description>
    <label>搬入先電話番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>