force-app/main/default/objects/Mst_Yard__c/fields/DeliveryPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPostalCode__c</fullName>
    <label>搬入先郵便番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>