force-app/main/default/objects/Mst_Yard__c/fields/DepartureArrivalArea__c.field-meta.xml
<CustomField>
    <fullName>DepartureArrivalArea__c</fullName>
    <description>ZERO料金・日数確認APIの画面フローでエラーメッセージの表示条件に使用。値追加する場合は要注意。山本</description>
    <label>発着地区分</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社ヤード</fullName>
            </value>
            <value>
                <fullName>他社オークション</fullName>
            </value>
            <value>
                <fullName>修理業者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>