force-app/main/default/objects/Mst_Yard__c/fields/DestinationNotes__c.field-meta.xml
<CustomField>
    <fullName>DestinationNotes__c</fullName>
    <description>喜多</description>
    <label>搬入先注意事項</label>
    <length>50</length>
    <type>Text</type>
</CustomField>