force-app/main/default/objects/Mst_Yard__c/fields/Mst_Yard_Classification__c.field-meta.xml
<CustomField>
    <fullName>Mst_Yard_Classification__c</fullName>
    <description>ZERO輸送手配APIの画面フローで使用しているため値追加時は要確認。山本</description>
    <label>発着地区分（ゼロ連携用）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社ヤード</fullName>
            </value>
            <value>
                <fullName>他社オークション</fullName>
            </value>
            <value>
                <fullName>修理業者</fullName>
            </value>
            <value>
                <fullName>港</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>