force-app/main/default/objects/Mst_Yard__c/fields/SevenDigits__c.field-meta.xml
<CustomField>
    <fullName>SevenDigits__c</fullName>
    <formula>LEN( Yard_code__c ) &gt;= 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>7文字以上でTRUE</inlineHelpText>
    <label>発着地コード文字数</label>
    <type>Checkbox</type>
</CustomField>