force-app/main/default/objects/Mst_Yard__c/fields/Yard_code__c.field-meta.xml
<CustomField>
    <fullName>Yard_code__c</fullName>
    <externalId>true</externalId>
    <label>発着地コード</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>