force-app/main/default/objects/Mst_Yard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Yard_code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>DeliveryPostalCode__c</columns>
    <columns>DeliveryPhonenumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>