force-app/main/default/objects/Mst_Yard__c/listViews/port.listView-meta.xml
<ListView>
    <fullName>port</fullName>
    <columns>NAME</columns>
    <columns>Yard_code__c</columns>
    <columns>DeliveryPostalCode__c</columns>
    <columns>DeliveryAddress__c</columns>
    <columns>DeliveryPhonenumber__c</columns>
    <columns>DeliveryDestinationPerson__c</columns>
    <columns>DestinationNotes__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mst_Yard_Classification__c</field>
        <operation>equals</operation>
        <value>港</value>
    </filters>
    <label>港</label>
</ListView>